; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/of/extr_device.c_of_release_dev.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/of/extr_device.c_of_release_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.of_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @of_release_dev(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.of_device*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %4 = load %struct.device*, %struct.device** %2, align 8
  %5 = call %struct.of_device* @to_of_device(%struct.device* %4)
  store %struct.of_device* %5, %struct.of_device** %3, align 8
  %6 = load %struct.of_device*, %struct.of_device** %3, align 8
  %7 = getelementptr inbounds %struct.of_device, %struct.of_device* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @of_node_put(i32 %8)
  %10 = load %struct.of_device*, %struct.of_device** %3, align 8
  %11 = call i32 @kfree(%struct.of_device* %10)
  ret void
}

declare dso_local %struct.of_device* @to_of_device(%struct.device*) #1

declare dso_local i32 @of_node_put(i32) #1

declare dso_local i32 @kfree(%struct.of_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
